compiler/testData/diagnostics/tests/typealias/localTypeAliasModifiers.kt
fun outer() {
    <!WRONG_MODIFIER_TARGET!>companion<!> typealias TestLocal = Any
}